@@ -31,6 +31,10 @@ Core and Builtins
 - Issue #27514: Make having too many statically nested blocks a SyntaxError
   instead of SystemError.
 
+- Issue #27366: Implemented PEP 487 (Simpler customization of class creation).
+  Upon subclassing, the __init_subclass__ classmethod is called on the base
+  class. Descriptors are initialized with __set_name__ after class creation.
+
 Library
 -------
 
